# c_xml_generation

./: CMakeLists.txt  README.md  build.py
examples/: example.c  example_xml_struct.xml
templates/: base.c  base.h  base.ji2.c  dynamic_array.c.ji2  dynamic_array_types.c.ji2  parameter_serialization_single.c.ji2  struct_definitions_.ji2  struct_function_dec_.ji2  struct_function_impl_.ji2
